[gd_scene load_steps=5 format=3 uid="uid://bh0i8jkgauhi"]

[ext_resource type="PackedScene" uid="uid://bcfh13am2wv0w" path="res://Player/Player.tscn" id="1_n6cc0"]
[ext_resource type="PackedScene" uid="uid://b5xq0fla2im1e" path="res://Levels/level01/ground.tscn" id="2_ikcb4"]
[ext_resource type="Script" path="res://Levels/level01/pipe_controller.gd" id="3_2qsj5"]
[ext_resource type="PackedScene" uid="uid://ifn11462n7tb" path="res://Objects/pipe/pipe_spawner.tscn" id="3_baxws"]

[node name="level01" type="Node2D"]
script = ExtResource("3_2qsj5")

[node name="Player" parent="." instance=ExtResource("1_n6cc0")]
position = Vector2(42, 151)
gravity_scale = 0.0
FLAP_FORCE = -300

[node name="camera" type="Camera2D" parent="."]
position = Vector2(91, 159)
current = true
zoom = Vector2(4, 4)
editor_draw_limits = true

[node name="ground" parent="." instance=ExtResource("2_ikcb4")]
z_index = 2

[node name="pipe_controller" type="Node2D" parent="."]
position = Vector2(192, 130)

[node name="pipe_spawner" parent="." instance=ExtResource("3_baxws")]
position = Vector2(192, 254)

[node name="pipe_spawner2" parent="." instance=ExtResource("3_baxws")]
position = Vector2(192, 6)

[node name="Timer" type="Timer" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
